src/objects/AB2__AdBookSavedDrop__c.object
<CustomObject>
    <description>AdBook Drops that have been saved for later addition to an Opportunity.</description>
    <fields>
        <fullName>AB2__ABMediaElementId__c</fullName>
        <description>The AdBoom MediaElementId</description>
        <formula>VALUE(AB2__ABMediaElement__r.AB2__MediaElementID__c)</formula>
        <label>AdBook MediaElement Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AB2__ABMediaElement__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Media Element that has been carted</description>
        <label>AdBook MediaElement</label>
        <referenceTo>AB2__MediaElement__c</referenceTo>
        <relationshipLabel>AdBook Saved Drops</relationshipLabel>
        <relationshipName>AdBook_Carted_Drops</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AB2__ABMediaType__c</fullName>
        <description>AdBook Media Type</description>
        <formula>TEXT(AB2__ABMediaElement__r.AB2__MediaType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AdBook Media Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AB2__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>AdBook Saved Drop</label>
    <nameField>
        <label>AdBook Saved Drop Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AdBook Saved Drops</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>